fix: add missing padding to card-container element

--- a/blocks/bike-type-info/bike-type-info.scss
+++ b/blocks/bike-type-info/bike-type-info.scss
@@ -31,6 +31,7 @@
   }
 
   &__card-container {
+    margin: $p_section_padding 0 0 0;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
